--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "my-final-portfolio",
+  "homepage": "https://github.com/shimna-puthanayil/my-final-portfolio/"
   "version": "1.0.0",
   "description": "",
   "main": "vite.config.js",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" ,
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  
   },
   "keywords": [],
   "author": "",
@@ -29,6 +33,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^6.0.0",
     "vite": "^4.2.0"
   }
 }
