--- a/package.json
+++ b/package.json
@@ -37,5 +37,17 @@
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^6.0.0",
     "vite": "^4.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
