updated homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-final-portfolio",
-  "homepage": "https://shimna-puthanayil.github.io/my-final-portfolio/",
+  "homepage": "https://shimna-puthanayil.github.io/my-final-portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "vite.config.js",
