--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "my-final-portfolio",
-  "homepage": "https://shimna-puthanayil.github.io/my-final-portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "vite.config.js",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "keywords": [],
@@ -28,26 +23,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
     "react-transition-group": "4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "gh-pages": "^6.0.0",
     "vite": "^4.2.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
