--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-in-viewport": "^1.0.0-beta.2",
     "react-router-dom": "^6.10.0",
     "react-transition-group": "4.4.5"
   },
