--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-in-viewport": "^1.0.0-beta.2",
